--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
-body {
+@font-face { font-family: Objective; src: url('./fonts/Objective-Regular.otf'); } 
+@font-face { font-family: Objective; font-weight: bold; src: url('./fonts/Objective-Bold.otf');}
+
+html, body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Objective', 'Oxygen', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  overflow: hidden;
+  height: 100%;
 }
